<resources>
    <string name="app_name">Mina kartor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Inställningar</string>
    <string name="location_label">Sök</string>
    <string name="normal">Normal</string>
    <string name="satellite">Sattelit</string>
    <string name="terrain">Terräng</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">Ingen</string>
    <string name="current_location">Välj Karta</string>
    <string name="search">Sök</string>
    <string name="search_hint">Sök plats</string>
    <string name="sorry_nomaps">Applikationen kunde inte ansluta kartor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="transparency">Opacitet</string>
    <string name="add_image">Lägg till</string>
    <string name="save_image">Spara</string>
    <string name="place_image">Placera</string>
    <string name="delete">Kasta</string>
    <string name="clickable">Clickable</string>
    <string name="add_new_map_image_label">Lägg till karta</string>
    <string name="place_map_image_label">Placera karta</string>
    <string name="rotation">Rotation</string>
    <string name="size">Storlek</string>
    <string name="editmap_map_name">Kartnamn</string>
    <string name="editmap_map_description">Beskrivning </string>
    <string name="editmap_choose_file_button_text">Välj bild</string>
    <string name="editmap_place_image_button_text">Placera</string>
    <string name="saved_map"> Karta sparad! </string>
    <string name="title_activity_map_list">Kartor</string>
    <string name="title_map_details"> Kartinformation</string>
    <string name="Navigation_drawer_version_text">Version : 1.0</string>
    <string name="app_need_location_to_work_toast">Applikationen kräver platstjänster för att fungera!</string>
    <string name="gps_has_been_turned_on_toast">GPS är aktiverad!</string>
    <string name="GPS_is_turned_off_toast">GPS är av!</string>
    <string name="found_toast_text">"Hittade: "</string>
    <string name="unable_to_connect_to_mappingservice_toast">Kan ej ansluta kartan</string>
    <string name="Alert_message_GPS_is_disabled">GPS Är avslagen på den här enheten. Vill du slå igång GPS?</string>
    <string name="Go_to_gps_settings_text">Gå till GPS inställning</string>
    <string name="cancel">Avbryt</string>
    <string name="search_for_hint">Sök plats</string>
    <string name="Map_not_connected">Karta en ansluten!</string>
    <string name="ready_to_map">Karta redo!</string>
    <string name="Home">Hem</string>
    <string name="new_map">Ny karta</string>
    <string name="map_gallery">Mina kartor</string>
    <string name="filename_is">"Filnamnet är: "</string>
    <string name="Unable_to_open_image_toast">Kunde inte öppna bild</string>
    <string name="go_to">Gå till</string>
    <string name="back_to_maps_list">Tillbaka till kartlista</string>
    <string name="Map_details_heading">Detaljer</string>
    <string name="Map_details_name">Karta: </string>
    <string name="Map_details_desc">Beskrivning: </string>
    <string name="map_details_id">ID: </string>
    <string name="map_button_text_no_coord">Kartan saknar koordinater</string>
    <string name="toast_groundoverlayactivity_place_map2of2">steg 2/2 Placera kartan exakt</string>
    <string name="Toast_groundoverlayactivity_place_image_1of2">Steg 1/2 . Passa in bildens centrum</string>
    <string name="Map_deleted">Karta kastad</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="MAP_API_KEY">AIzaSyDjOqVVe0X8_3wSV58UrZg3IRiLiFWvcyM</string>
    <string name="PLACES_API_KEY">AIzaSyBvG0Mcl9sxLbj3Gi1067D7cV4kGoVmWgc</string>

</resources>
