<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mapTypeNormal"
        android:title="@string/normal" />
    <item
        android:id="@+id/mapTypeSatellite"
        android:title="@string/satellite" />
    <item
        android:id="@+id/mapTypeTerrain"
        android:title="@string/terrain" />
    <item
        android:id="@+id/mapTypeHybrid"
        android:title="@string/hybrid" />
    <item
        android:id="@+id/mapTypeNone"
        android:title="@string/none" />

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />

</menu>