<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_map_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/nav_header_vertical_spacing"
    android:layout_marginTop="@dimen/Action_Bar_height"
    >

    <Button
        android:id="@+id/btn_delete_map_object"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_red_dark"
        android:text="@string/delete" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/btn_delete_map_object">
        <TextView
            android:id="@+id/textView_mapdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Map_details_heading"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <ImageView
            android:id="@+id/map_image_view_in_details"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            />


        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >


            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginBottom="@dimen/map_vertical_margin">

                <TextView
                    android:id="@+id/textView_mapname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Map_details_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/textView_insert_mapname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Name of your map"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="kartans namn" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginBottom="@dimen/map_vertical_margin">


                <TextView
                    android:id="@+id/textView_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Map_details_desc"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/textView_insert_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Description"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="kartans beskrivning" />

            </TableRow>

            <TableRow>
            <TextView
                android:id="@+id/textView_otherinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_details_id"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="5dp" />

            <TextView
                android:id="@+id/textView_otherinfo_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="placeholder for other map id"
                android:padding="5dp"
                android:text="kartans id" />
            </TableRow>
        </TableLayout>



        <Button
            android:layout_marginTop="@dimen/Action_Bar_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to"
            android:id="@+id/button_go_to_map"
            android:layout_gravity="center" />

    </LinearLayout>

</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>